--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -9,6 +9,12 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        
+        <ImageView
+             android:id="@+id/imagen"
+             android:layout_width="100dp"
+             android:layout_height="150dp"
+             android:scaleType="centerCrop" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -16,7 +22,17 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
             android:id="@+id/nombre"
+            android:layout_toRightOf="@+id/imagen"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/municipio"
+            android:layout_above="@+id/nombre"
+            android:layout_alignLeft="@+id/nombre" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
